--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngrx/store": "^12.5.0",
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.0.0-beta3",
     "rxjs": "~6.6.0",
